Latest CVS Changes 08/11/05
  - added SAX support in gpac XML parser to avoid dependency on libxml when unneeded
  - added new svg_in module using gpac sax parser (supports progressive loading too)
  - added "-name" option to MP4Box (track import and general cmd line opt) for setting the track handler name
  - added support for SVG scripting (ecmascript through SpiderMonkey) - most of microDOM is supported, except presentation traits.
  - added support for SVG events (DOM)
  - added support for SVG scene dumping
  - added PAR modification support to MP4Box (import time and file based)
  - IsoMedia spliting more precise
  - fixed bug in gradient raster (spread/pad/repeat modes were broken)
  - added SVG Tiny gradients
  - added SVG.preserveAspectRatio support
  - support for SVG SAX parsing & progressive loading, cf configuration.html or man gpac for more info 
  - fixed bevel stroking bug and many SVG rendering ones
  - fixed bug in MP4Box track concatenation of MPEG-4 user streams
  - added NHML import/export. NHML is an XML representation of the NHNT file, with add-ons and a more flexible way of integrating media. Doc to come on web site
  - fixed bug in meta items storage (existing items were corrupted on file rewrite)
  - fixed splitx option to support end times larger than file duration
  - clean-up of 2D direct rendering mode: 
      * no more bounds tracking for less memory usage
      * automatically mode switch to direct rendering when using slide navigation (pan&zoom)
  - clean-up of soft raster: 
      * removed all bezier curbs handling, let gpac core handle those
      * paths are now always flatten to reduce rastering times
      * misc optimizations of scanline converter (no more Y-sorting, only X-sorting used)
  - fixed globalQP context loading issues
  - minor speed improvement of BT/WRL loader
  - updated makefiles for compilation under GPE (doc still to come)
  - fixed bugs related to cache in file downloader